--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,21 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.numberField {
+  width: 600px;
+  margin: 10px auto;
+  display: grid;
+
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+
+  gap: 10px;
+  height: 100%;
 }
